# forge

./: .gitignore  Cargo.toml  LICENSE  README.md  test.toml
.github/workflows/: release.yml  test.yml
data/: forge.toml  knowledge.toml
src/: backend.rs  color.rs  command.rs  facts.rs  forge.rs  format.rs  github.rs  knowledge.rs  lib.rs  main.rs  platform.rs  sync.rs  version.rs
tests/: integration.rs  knowledge_contract.rs
