[package]
name = "forge"
version = "0.1.3"
edition = "2024"
authors = ["Rana Ian"]
description = "Development environment orchestrator - install and manage tools from GitHub, Cargo, Brew, and more"
keywords = ["development", "tools", "environment", "orchestrator", "forge"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/rana/forge"
repository = "https://github.com/rana/forge"
license = "MIT"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4.5.41", features = ["derive"] }
which = "8.0"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
regex = "1.10"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
